feat: images path & beatmakers mb

--- a/src/app/components/pages/team/team.component.html
+++ b/src/app/components/pages/team/team.component.html
@@ -30,7 +30,7 @@
             <div class="absolute -mt-20 w-full flex justify-center">
               <div class="h-52 w-52">
                 <img
-                  src="/kitsui.png"
+                  src="/images/partners/kitsui.png"
                   alt="Display Picture of Kitsui"
                   role="img"
                   class="rounded-full object-cover h-full w-full shadow-md"
@@ -43,11 +43,11 @@
               >
                 Kitsui
               </h1>
-              <p class="text-gray-900text-sm text-center">
-                VCG Partner
-              </p>
+              <p class="text-gray-900text-sm text-center">VCG Partner</p>
               <p class="text-center text-gray-900 text-base pt-3 font-normal">
-                Ownership, Business Management, Accounting, Treasury Management, Music production, Mixing, Writing, Singing/Rapping, Client Relationship Management, Marketing and Web Development.
+                Ownership, Business Management, Accounting, Treasury Management,
+                Music production, Mixing, Writing, Singing/Rapping, Client
+                Relationship Management, Marketing and Web Development.
               </p>
               <div class="w-full flex justify-center pt-5 pb-5"></div>
             </div>
@@ -61,7 +61,7 @@
             <div class="absolute -mt-20 w-full flex justify-center">
               <div class="h-52 w-52">
                 <img
-                  src="/biggy.png"
+                  src="/images/partners/biggy.png"
                   alt="Display Picture of Biggy"
                   role="img"
                   class="rounded-full object-cover h-full w-full shadow-md"
@@ -74,11 +74,15 @@
               >
                 Biggy
               </h1>
-              <p class="text-gray-900text-sm text-center">
-                VCG Partner
-              </p>
+              <p class="text-gray-900text-sm text-center">VCG Partner</p>
               <p class="text-center text-gray-900 text-base pt-3 font-normal">
-                Ownership, Filming and Acting.<br><span class="italic text-gray-300 text-sm">Biggy is the president but that's a secret, also he imitates crows during every night. If you're reading this it's either you're selecting it or you've got dark reader installed in your browser.</span>
+                Ownership, Filming and Acting.<br /><span
+                  class="italic text-gray-300 text-sm"
+                  >Biggy is the president but that's a secret, also he imitates
+                  crows during every night. If you're reading this it's either
+                  you're selecting it or you've got dark reader installed in
+                  your browser.</span
+                >
               </p>
               <div class="w-full flex justify-center pt-5 pb-5"></div>
             </div>
@@ -92,7 +96,7 @@
             <div class="absolute -mt-20 w-full flex justify-center">
               <div class="h-52 w-52">
                 <img
-                  src="/koni.png"
+                  src="/images/partners/koni.png"
                   alt="Display Picture of Køni"
                   role="img"
                   class="rounded-full object-cover h-full w-full shadow-md"
@@ -105,11 +109,14 @@
               >
                 Køni
               </h1>
-              <p class="text-gray-900text-sm text-center">
-                VCG Partner
-              </p>
+              <p class="text-gray-900text-sm text-center">VCG Partner</p>
               <p class="text-center text-gray-900 text-base pt-3 font-normal">
-                Ownership, Business Management, Mixing, Writing, Rapping, Client Relationship Management and Marketing.<br><span class="italic text-gray-300 text-base">Koni is the best rapper ever! And if you've read well you know who's writing these secret texts.</span>
+                Ownership, Business Management, Mixing, Writing, Rapping, Client
+                Relationship Management and Marketing.<br /><span
+                  class="italic text-gray-300 text-base"
+                  >Koni is the best rapper ever! And if you've read well you
+                  know who's writing these secret texts.</span
+                >
               </p>
               <div class="w-full flex justify-center pt-5 pb-5"></div>
             </div>
@@ -140,15 +147,15 @@
         </div>
 
         <!-- Team Members -->
-        <div class="flex flex-wrap justify-center">
+        <div class="flex flex-wrap justify-center mb-24">
           <div class="w-full md:w-6/12 lg:w-3/12 mb-6 px-6 sm:px-6 lg:px-4">
             <div class="flex flex-col">
               <!-- Avatar -->
 
-                <img
-                  class="rounded-2xl drop-shadow-md hover:drop-shadow-xl transition-all duration-200 delay-100"
-                  src="https://images.unsplash.com/photo-1634926878768-2a5b3c42f139?fit=clamp&w=400&h=400&q=80"
-                />
+              <img
+                class="rounded-2xl drop-shadow-md hover:drop-shadow-xl transition-all duration-200 delay-100"
+                src="https://images.unsplash.com/photo-1634926878768-2a5b3c42f139?fit=clamp&w=400&h=400&q=80"
+              />
 
               <!-- Details -->
               <div class="text-center mt-6">
@@ -178,10 +185,10 @@
           <div class="w-full md:w-6/12 lg:w-3/12 mb-6 px-6 sm:px-6 lg:px-4">
             <div class="flex flex-col">
               <!-- Avatar -->
-                <img
-                  class="rounded-2xl drop-shadow-md hover:drop-shadow-xl transition-all duration-200 delay-100"
-                  src="https://images.unsplash.com/photo-1634896941598-b6b500a502a7?fit=clamp&w=400&h=400&q=80"
-                />
+              <img
+                class="rounded-2xl drop-shadow-md hover:drop-shadow-xl transition-all duration-200 delay-100"
+                src="https://images.unsplash.com/photo-1634896941598-b6b500a502a7?fit=clamp&w=400&h=400&q=80"
+              />
 
               <!-- Details -->
               <div class="text-center mt-6">
@@ -207,10 +214,43 @@
               </div>
             </div>
           </div>
+
+          <div class="w-full md:w-6/12 lg:w-3/12 mb-6 px-6 sm:px-6 lg:px-4">
+            <div class="flex flex-col">
+              <!-- Avatar -->
+              <img
+                class="rounded-2xl drop-shadow-md hover:drop-shadow-xl transition-all duration-200 delay-100"
+                src="https://images.unsplash.com/photo-1634896941598-b6b500a502a7?fit=clamp&w=400&h=400&q=80"
+              />
+
+              <!-- Details -->
+              <div class="text-center mt-6">
+                <!-- Name -->
+                <h1 class="text-white text-xl font-bold mb-1">DarkMusicBeat</h1>
+
+                <!-- Social Icons -->
+                <div
+                  class="flex items-center justify-center opacity-50 hover:opacity-100 transition-opacity duration-300"
+                >
+                  <!-- Instagram -->
+                  <a
+                    href="https://www.instagram.com/d.m.b_officiel/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    class="flex rounded-full hover:bg-orange-50 h-[53px] w-[53px] mb-3"
+                  >
+                    <i
+                      class="mdi mdi-instagram text-orange-400 mx-auto mt-2 text-3xl"
+                    ></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
 
         <div
-          class="flex flex-col sm:flex-row justify-between items-center h-96 sm:h-48"
+          class="flex flex-col sm:flex-row justify-center items-center h-96 sm:h-48"
         >
           <div class="mb-10 mx-3 h-full flex justify-center">
             <a
