feat: beatmakers icons

--- a/src/app/components/pages/team/team.component.html
+++ b/src/app/components/pages/team/team.component.html
@@ -154,7 +154,7 @@
 
               <img
                 class="rounded-2xl drop-shadow-md hover:drop-shadow-xl transition-all duration-200 delay-100"
-                src="https://images.unsplash.com/photo-1634926878768-2a5b3c42f139?fit=clamp&w=400&h=400&q=80"
+                src="/images/beatmakers/oddgyes.png"
               />
 
               <!-- Details -->
@@ -187,7 +187,7 @@
               <!-- Avatar -->
               <img
                 class="rounded-2xl drop-shadow-md hover:drop-shadow-xl transition-all duration-200 delay-100"
-                src="https://images.unsplash.com/photo-1634896941598-b6b500a502a7?fit=clamp&w=400&h=400&q=80"
+                src="/images/beatmakers/shidozz.png"
               />
 
               <!-- Details -->
@@ -220,7 +220,7 @@
               <!-- Avatar -->
               <img
                 class="rounded-2xl drop-shadow-md hover:drop-shadow-xl transition-all duration-200 delay-100"
-                src="https://images.unsplash.com/photo-1634896941598-b6b500a502a7?fit=clamp&w=400&h=400&q=80"
+                src="/images/beatmakers/dmb.png"
               />
 
               <!-- Details -->
