--- a/src/app/components/pages/getintouch/getintouch.component.html
+++ b/src/app/components/pages/getintouch/getintouch.component.html
@@ -1,145 +1,174 @@
 <div class="isolate bg-gray-900 px-6 py-24 sm:py-32 lg:px-8">
-    <div class="mx-auto max-w-2xl text-center">
-      <h2
-        class="text-balance text-4xl font-semibold tracking-tight text-white sm:text-5xl"
-      >
-        Contact VCG Recordz
-      </h2>
-      <p class="mt-2 text-lg leading-8 text-gray-300">
-        We will respond as soon as possible.
-      </p>
-    </div>
-    <form action="#" method="POST" class="mx-auto mt-16 max-w-xl sm:mt-20">
-      <div class="grid grid-cols-1 gap-x-8 gap-y-6 sm:grid-cols-2">
-        <div>
-          <label
-            for="first-name"
-            class="block text-sm font-semibold leading-6 text-white"
-            >First name *</label
-          >
-          <div class="mt-2.5">
-            <input
-              type="text"
-              name="first-name"
-              id="first-name"
-              autocomplete="given-name"
-              class="block w-full rounded-md border-0 px-3.5 py-2 text-white shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-blue-600 sm:text-sm sm:leading-6"
-            />
-          </div>
-        </div>
-        <div>
-          <label
-            for="last-name"
-            class="block text-sm font-semibold leading-6 text-white"
-            >Last name *</label
-          >
-          <div class="mt-2.5">
-            <input
-              type="text"
-              name="last-name"
-              id="last-name"
-              autocomplete="family-name"
-              class="block w-full rounded-md border-0 px-3.5 py-2 text-white shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-blue-600 sm:text-sm sm:leading-6"
-            />
-          </div>
-        </div>
-        <div class="sm:col-span-2">
-          <label
-            for="email"
-            class="block text-sm font-semibold leading-6 text-white"
-            >Email *</label
-          >
-          <div class="mt-2.5">
-            <input
-              type="email"
-              name="email"
-              id="email"
-              autocomplete="email"
-              class="block w-full rounded-md border-0 px-3.5 py-2 text-white shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-blue-600 sm:text-sm sm:leading-6"
-            />
-          </div>
-        </div>
-        <div class="sm:col-span-2">
-          <label
-            for="phone-number"
-            class="block text-sm font-semibold leading-6 text-white"
-            >Phone number</label
-          >
-          <div class="relative mt-2.5">
-            <input
-              type="tel"
-              name="phone-number"
-              id="phone-number"
-              autocomplete="tel"
-              class="block w-full rounded-md border-0 px-3.5 py-2 pl-20 text-white shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-blue-600 sm:text-sm sm:leading-6"
-            />
-          </div>
-        </div>
-        <div class="sm:col-span-2">
-          <label
-            for="phone-number"
-            class="block text-sm font-semibold leading-6 text-white"
-            >Instagram</label
-          >
-          <div class="relative mt-2.5">
-            <input
-              type="tel"
-              name="phone-number"
-              id="phone-number"
-              autocomplete="tel"
-              class="block w-full rounded-md border-0 px-3.5 py-2 pl-20 text-white shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-blue-600 sm:text-sm sm:leading-6"
-            />
-          </div>
-        </div>
-        <div class="sm:col-span-2">
-          <label
-            for="message"
-            class="block text-sm font-semibold leading-6 text-white"
-            >Message *</label
-          >
-          <div class="mt-2.5">
-            <textarea
-              name="message"
-              id="message"
-              rows="4"
-              class="block w-full rounded-md border-0 px-3.5 py-2 text-white shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-blue-600 sm:text-sm sm:leading-6"
-            ></textarea>
-          </div>
-        </div>
-        <div class="flex gap-x-4 sm:col-span-2">
-          <div class="flex h-6 items-center">
-            <!-- Enabled: "bg-blue-600", Not Enabled: "bg-gray-200" -->
-            <button
-              type="button"
-              class="flex w-8 flex-none cursor-pointer rounded-full bg-gray-200 p-px ring-1 ring-inset ring-gray-900/5 transition-colors duration-200 ease-in-out focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-600"
-              role="switch"
-              aria-checked="false"
-              aria-labelledby="switch-1-label"
-            >
-              <span class="sr-only">Agree to policies</span>
-              <!-- Enabled: "translate-x-3.5", Not Enabled: "translate-x-0" -->
-              <span
-                aria-hidden="true"
-                class="h-4 w-4 translate-x-0 transform rounded-full bg-white shadow-sm ring-1 ring-gray-900/5 transition duration-200 ease-in-out"
-              ></span>
-            </button>
-          </div>
-          <label class="text-sm leading-6 text-gray-600" id="switch-1-label">
-            By selecting this, you agree to our
-            <a href="#" class="font-semibold text-blue-500"
-              >privacy&nbsp;policy</a
-            >.
-          </label>
-        </div>
-      </div>
-      <div class="mt-10">
-        <button
-          type="submit"
-          class="block w-full rounded-md bg-blue-600 px-3.5 py-2.5 text-center text-sm font-semibold text-white shadow-sm hover:bg-blue-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-600"
-        >
-          Let's talk
-        </button>
-      </div>
-    </form>
+  <div class="mx-auto max-w-2xl text-center">
+    <h2
+      class="text-balance text-4xl font-semibold tracking-tight text-white sm:text-5xl"
+    >
+      Contact VCG Recordz
+    </h2>
+    <p class="mt-2 text-lg leading-8 text-gray-300">
+      We will respond as soon as possible.
+    </p>
   </div>
-  
+  <form
+    [formGroup]="contactForm"
+    (ngSubmit)="onSubmit()"
+    class="mx-auto mt-16 max-w-xl sm:mt-20"
+  >
+    <div class="grid grid-cols-1 gap-x-8 gap-y-6 sm:grid-cols-2">
+      <div>
+        <label
+          for="first-name"
+          class="block text-sm font-semibold leading-6 text-white"
+          >First name *</label
+        >
+        <input
+          type="text"
+          id="first-name"
+          formControlName="firstName"
+          class="block w-full rounded-md px-3.5 py-2 text-black shadow-sm ring-1 ring-gray-300 placeholder:text-gray-400"
+        />
+        <div
+          *ngIf="
+            contactForm.get('firstName')?.touched &&
+            contactForm.get('firstName')?.invalid
+          "
+          class="text-red-500 text-sm"
+        >
+          First name is required.
+        </div>
+      </div>
+
+      <div>
+        <label
+          for="last-name"
+          class="block text-sm font-semibold leading-6 text-white"
+          >Last name *</label
+        >
+        <input
+          type="text"
+          id="last-name"
+          formControlName="lastName"
+          class="block w-full rounded-md px-3.5 py-2 text-black shadow-sm ring-1 ring-gray-300 placeholder:text-gray-400"
+        />
+        <div
+          *ngIf="
+            contactForm.get('lastName')?.touched &&
+            contactForm.get('lastName')?.invalid
+          "
+          class="text-red-500 text-sm"
+        >
+          Last name is required.
+        </div>
+      </div>
+
+      <div class="sm:col-span-2">
+        <label
+          for="email"
+          class="block text-sm font-semibold leading-6 text-white"
+          >Email *</label
+        >
+        <input
+          type="email"
+          id="email"
+          formControlName="email"
+          class="block w-full rounded-md px-3.5 py-2 text-black shadow-sm ring-1 ring-gray-300 placeholder:text-gray-400"
+        />
+        <div
+          *ngIf="
+            contactForm.get('email')?.touched &&
+            contactForm.get('email')?.hasError('required')
+          "
+          class="text-red-500 text-sm"
+        >
+          Email is required.
+        </div>
+        <div
+          *ngIf="
+            contactForm.get('email')?.touched &&
+            contactForm.get('email')?.hasError('email')
+          "
+          class="text-red-500 text-sm"
+        >
+          Please enter a valid email address.
+        </div>
+      </div>
+
+      <div class="sm:col-span-2">
+        <label
+          for="phone-number"
+          class="block text-sm font-semibold leading-6 text-white"
+          >Phone number</label
+        >
+        <input
+          type="tel"
+          id="phone-number"
+          formControlName="phoneNumber"
+          class="block w-full rounded-md px-3.5 py-2 text-black shadow-sm ring-1 ring-gray-300 placeholder:text-gray-400"
+        />
+        <div
+          *ngIf="
+            contactForm.get('phoneNumber')?.touched &&
+            contactForm.get('phoneNumber')?.invalid
+          "
+          class="text-red-500 text-sm"
+        >
+          Please enter a valid phone number.
+        </div>
+      </div>
+
+      <div class="sm:col-span-2">
+        <label
+          for="message"
+          class="block text-sm font-semibold leading-6 text-white"
+          >Message *</label
+        >
+        <textarea
+          id="message"
+          formControlName="message"
+          rows="4"
+          class="block w-full rounded-md px-3.5 py-2 text-black shadow-sm ring-1 ring-gray-300 placeholder:text-gray-400"
+        ></textarea>
+        <div
+          *ngIf="
+            contactForm.get('message')?.touched &&
+            contactForm.get('message')?.invalid
+          "
+          class="text-red-500 text-sm"
+        >
+          Message is required and must be at least 10 characters long.
+        </div>
+      </div>
+
+      <div class="flex gap-x-4 sm:col-span-2">
+        <input
+          type="checkbox"
+          formControlName="privacyPolicy"
+          id="privacy-policy"
+          class="mr-2"
+        />
+        <label for="privacy-policy" class="text-sm leading-6 text-gray-600">
+          By selecting this, you agree to our
+          <a href="#" class="font-semibold text-blue-500">privacy policy</a>.
+        </label>
+        <div
+          *ngIf="
+            contactForm.get('privacyPolicy')?.touched &&
+            contactForm.get('privacyPolicy')?.invalid
+          "
+          class="text-red-500 text-sm"
+        >
+          You must agree to the privacy policy.
+        </div>
+      </div>
+    </div>
+    <div class="mt-10">
+      <button
+        type="submit"
+        [disabled]="contactForm.invalid"
+        class="block w-full rounded-md bg-blue-600 px-3.5 py-2.5 text-center text-sm font-semibold text-white shadow-sm hover:bg-blue-500 cursor-pointer"
+      >
+        Let's talk
+      </button>
+    </div>
+  </form>
+</div>
