--- a/src/app/components/pages/getintouch/getintouch.component.html
+++ b/src/app/components/pages/getintouch/getintouch.component.html
@@ -14,7 +14,14 @@
     (ngSubmit)="onSubmit()"
     class="mx-auto mt-16 max-w-xl sm:mt-20"
   >
-    <div class="grid grid-cols-1 gap-x-8 gap-y-6 sm:grid-cols-2">
+    <div *ngIf="isLoading" class="text-center mb-4">
+      <div class="loader"></div>
+      <p class="text-gray-300">Submitting your request...</p>
+    </div>
+    <div
+      class="grid grid-cols-1 gap-x-8 gap-y-6 sm:grid-cols-2"
+      [hidden]="isLoading"
+    >
       <div>
         <label
           for="first-name"
