feat: loading animation style

--- a/src/app/components/pages/getintouch/getintouch.component.html
+++ b/src/app/components/pages/getintouch/getintouch.component.html
@@ -14,7 +14,7 @@
     (ngSubmit)="onSubmit()"
     class="mx-auto mt-16 max-w-xl sm:mt-20"
   >
-    <div *ngIf="isLoading" class="text-center mb-4">
+    <div *ngIf="isLoading" class="text-center flex mb-4 justify-center items-center flex-col">
       <div class="loader"></div>
       <p class="text-gray-300">Submitting your request...</p>
     </div>
