feat: artists page

--- a/src/app/components/pages/artists/artists.component.html
+++ b/src/app/components/pages/artists/artists.component.html
@@ -1,1 +1,125 @@
-<p>artists works!</p>
+<h2 class="text-2xl font-semibold text-white sm:text-3xl text-center">
+  We distribute these artists' music
+</h2>
+
+<section class="m-8">
+  <div
+    class="mx-auto max-w-screen-xl px-4 py-8 sm:px-6 lg:px-8 bg-white rounded-xl"
+  >
+    <div class="grid grid-cols-1 gap-4 md:grid-cols-2 md:items-center md:gap-8">
+      <div>
+        <div class="max-w-lg md:max-w-none">
+          <h2 class="text-2xl font-semibold text-gray-900 sm:text-3xl">
+            Kitsui & Køni
+          </h2>
+
+          <p class="mt-4 text-gray-700">
+            Kitsui & Køni are a duo of french rappers. They have released more than 30 songs together, including 4 EPs.
+          </p>
+        </div>
+      </div>
+
+      <div>
+        <img src="/images/artists/kitsuikoni.png" class="rounded-lg" alt="" />
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="m-8">
+  <div
+    class="mx-auto max-w-screen-xl px-4 py-8 sm:px-6 lg:px-8 bg-white rounded-xl"
+  >
+    <div class="grid grid-cols-1 gap-4 md:grid-cols-2 md:items-center md:gap-8">
+      <div>
+        <img src="/images/artists/madpoof.png" class="rounded-lg" alt="" />
+      </div>
+      <div>
+        <div class="max-w-lg md:max-w-none">
+          <h2 class="text-2xl font-semibold text-gray-900 sm:text-3xl">
+            MADPOOF
+          </h2>
+
+          <p class="mt-4 text-gray-700">
+            MADPOOF is a drum and bass and breakcore producer. He has released more than 10 singles already.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<h2 class="text-2xl font-semibold text-white sm:text-3xl text-center">
+  We collaborated with these artists
+</h2>
+
+<section class="m-8">
+  <div
+    class="mx-auto max-w-screen-xl px-4 py-8 sm:px-6 lg:px-8 bg-white rounded-xl"
+  >
+    <div class="grid grid-cols-1 gap-4 md:grid-cols-2 md:items-center md:gap-8">
+      <div>
+        <div class="max-w-lg md:max-w-none">
+          <h2 class="text-2xl font-semibold text-gray-900 sm:text-3xl">
+            Cl6ud6
+          </h2>
+
+          <p class="mt-4 text-gray-700">
+            Cl6ud6 is a french rapper who has worked with us Køni many times.
+          </p>
+        </div>
+      </div>
+
+      <div>
+        <img src="/images/artists/cl6ud6.jpg" class="rounded-lg" alt="" />
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="m-8">
+  <div
+    class="mx-auto max-w-screen-xl px-4 py-8 sm:px-6 lg:px-8 bg-white rounded-xl"
+  >
+    <div class="grid grid-cols-1 gap-4 md:grid-cols-2 md:items-center md:gap-8">
+      <div>
+        <img src="/images/artists/madpoof.png" class="rounded-lg" alt="" />
+      </div>
+      <div>
+        <div class="max-w-lg md:max-w-none">
+          <h2 class="text-2xl font-semibold text-gray-900 sm:text-3xl">
+            Gaxve
+          </h2>
+
+          <p class="mt-4 text-gray-700">
+            Gaxve is a breakcore producer. He has collaborated with MADPOOF.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="m-8">
+  <div
+    class="mx-auto max-w-screen-xl px-4 py-8 sm:px-6 lg:px-8 bg-white rounded-xl"
+  >
+    <div class="grid grid-cols-1 gap-4 md:grid-cols-2 md:items-center md:gap-8">
+      <div>
+        <div class="max-w-lg md:max-w-none">
+          <h2 class="text-2xl font-semibold text-gray-900 sm:text-3xl">
+            CXMET
+          </h2>
+
+          <p class="mt-4 text-gray-700">
+            CXMET is phonkwave producer. He has collaborated with MADPOOF.
+          </p>
+        </div>
+      </div>
+
+      <div>
+        <img src="/images/artists/madpoof.png" class="rounded-lg" alt="" />
+      </div>
+    </div>
+  </div>
+</section>
