feat: services templates

--- a/src/app/components/pages/artists/artists.component.html
+++ b/src/app/components/pages/artists/artists.component.html
@@ -13,7 +13,7 @@
             Kitsui & Køni
           </h2>
 
-          <p class="mt-4 text-gray-700">
+          <p class="mt-4 text-gray-700 font-medium">
             Kitsui & Køni are a duo of french rappers. They have released more than 30 songs together, including 4 EPs.
           </p>
         </div>
@@ -40,8 +40,8 @@
             MADPOOF
           </h2>
 
-          <p class="mt-4 text-gray-700">
-            MADPOOF is a drum and bass and breakcore producer. He has released more than 10 singles already.
+          <p class="mt-4 text-gray-700 font-medium">
+            MADPOOF is a drum & bass and breakcore producer. He has released more than 10 singles already.
           </p>
         </div>
       </div>
@@ -64,7 +64,7 @@
             Cl6ud6
           </h2>
 
-          <p class="mt-4 text-gray-700">
+          <p class="mt-4 text-gray-700 font-medium">
             Cl6ud6 is a french rapper who has worked with us Køni many times.
           </p>
         </div>
@@ -91,7 +91,7 @@
             Gaxve
           </h2>
 
-          <p class="mt-4 text-gray-700">
+          <p class="mt-4 text-gray-700 font-medium">
             Gaxve is a breakcore producer. He has collaborated with MADPOOF.
           </p>
         </div>
@@ -111,7 +111,7 @@
             CXMET
           </h2>
 
-          <p class="mt-4 text-gray-700">
+          <p class="mt-4 text-gray-700 font-medium">
             CXMET is phonkwave producer. He has collaborated with MADPOOF.
           </p>
         </div>
