--- a/src/app/components/pages/services/services.component.html
+++ b/src/app/components/pages/services/services.component.html
@@ -1,82 +1,211 @@
-<!--
-  Heads up! 👋
-
-  This component comes with some `rtl` classes. Please remove them if they are not needed in your project.
--->
-
+<section class="py-14">
+  <div class="max-w-screen-xl mx-auto px-4 text-gray-600 md:px-8">
+    <div class="max-w-xl space-y-3">
+      <h3 class="text-indigo-600 font-semibold">Features</h3>
+      <p class="text-gray-800 text-3xl font-semibold sm:text-4xl">
+        Do more with less complexity
+      </p>
+      <p>
+        Explore our services designed for artists and producers: music
+        distribution, beatmaking, and professional mixing/recording.
+      </p>
+    </div>
+    <div class="mt-12">
+      <ul
+        class="grid gap-x-12 divide-y sm:grid-cols-2 sm:gap-y-8 sm:divide-y-0 lg:divide-x lg:grid-cols-3 lg:gap-x-0"
+      >
+        <!-- Feature 1 -->
+        <li class="feature-1 space-y-3 py-8 lg:px-12 sm:py-0">
+          <div
+            class="w-12 h-12 border text-indigo-600 rounded-full flex items-center justify-center"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="w-6 h-6"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M3 13.125C3 12.504 3.504 12 4.125 12h2.25c.621 0 1.125.504 1.125 1.125v6.75C7.5 20.496 6.996 21 6.375 21h-2.25A1.125 1.125 0 013 19.875v-6.75zM9.75 8.625c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125v11.25c0 .621-.504 1.125-1.125 1.125h-2.25a1.125 1.125 0 01-1.125-1.125V8.625zM16.5 4.125c0-.621.504-1.125 1.125-1.125h2.25C20.496 3 21 3.504 21 4.125v15.75c0 .621-.504 1.125-1.125-1.125h-2.25a1.125 1.125 0 01-1.125-1.125V4.125z"
+              />
+            </svg>
+          </div>
+          <h4 class="text-lg text-gray-800 font-semibold">
+            Music Distribution
+          </h4>
+          <p>
+            Flexible solutions for artists to share their music globally on
+            streaming and download platforms.
+          </p>
+        </li>
+        <!-- Feature 2 -->
+        <li class="feature-2 space-y-3 py-8 lg:px-12 sm:py-0">
+          <div
+            class="w-12 h-12 border text-indigo-600 rounded-full flex items-center justify-center"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="w-6 h-6"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M16.5 10.5V6.75a4.5 4.5 0 10-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 002.25-2.25v-6.75a2.25 2.25 0 00-2.25-2.25H6.75a2.25 2.25 0 00-2.25 2.25v6.75a2.25 2.25 0 002.25 2.25z"
+              />
+            </svg>
+          </div>
+          <h4 class="text-lg text-gray-800 font-semibold">Beatmaking</h4>
+          <p>
+            Join our beatmaker network and get your productions promoted on
+            YouTube and selling platforms.
+          </p>
+        </li>
+        <!-- Feature 3 -->
+        <li class="feature-3 space-y-3 py-8 lg:px-12 sm:py-0">
+          <div
+            class="w-12 h-12 border text-indigo-600 rounded-full flex items-center justify-center"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="w-6 h-6"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M6.429 9.75L2.25 12l4.179 2.25m0-4.5l5.571 3 5.571-3m-11.142 0L2.25 7.5 12 2.25l9.75 5.25-4.179 2.25m0 0L21.75 12l-4.179 2.25m0 0l4.179 2.25L12 21.75 2.25 16.5l4.179-2.25m11.142 0l-5.571 3-5.571-3"
+              />
+            </svg>
+          </div>
+          <h4 class="text-lg text-gray-800 font-semibold">Mixing/Recording</h4>
+          <p>
+            High-quality services in hip-hop/rap music production with
+            professional-grade studios.
+          </p>
+        </li>
+      </ul>
+    </div>
+  </div>
+</section>
 <section class="overflow-hidden bg-gray-50 sm:grid sm:grid-cols-2">
   <div class="p-8 md:p-12 lg:px-16 lg:py-24">
     <div
       class="mx-auto max-w-xl text-center ltr:sm:text-left rtl:sm:text-right"
     >
       <h2 class="text-2xl font-bold text-gray-900 md:text-3xl">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit
+        VCG Distribution
       </h2>
-
       <p class="hidden text-gray-500 md:mt-4 md:block">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Et, egestas
-        tempus tellus etiam sed. Quam a scelerisque amet ullamcorper eu enim et
-        fermentum, augue. Aliquet amet volutpat quisque ut interdum tincidunt
-        duis.
+        We distribute music for emerging artists on all major streaming and
+        download platforms. Choose between our per-project service or an
+        unlimited monthly subscription. Artists opting for the subscription will
+        be showcased on the VCG website.
       </p>
-
       <div class="mt-4 md:mt-8">
         <a
           href="#"
           class="inline-block rounded bg-emerald-600 px-12 py-3 text-sm font-medium text-white transition hover:bg-emerald-700 focus:outline-none focus:ring focus:ring-yellow-400"
         >
-          Get Started Today
+          Learn More
         </a>
       </div>
     </div>
   </div>
-
   <img
     alt=""
     src="https://images.unsplash.com/photo-1464582883107-8adf2dca8a9f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
     class="h-56 w-full object-cover sm:h-full"
   />
 </section>
-
 <section>
-    <div class="mx-auto max-w-screen-2xl px-4 py-8 sm:px-6 lg:px-8">
-      <div class="grid grid-cols-1 gap-4 md:grid-cols-2">
-        <div class="bg-blue-600 p-8 md:p-12 lg:px-16 lg:py-24">
-          <div class="mx-auto max-w-xl text-center">
-            <h2 class="text-2xl font-bold text-white md:text-3xl">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit
-            </h2>
-  
-            <p class="hidden text-white/90 sm:mt-4 sm:block">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Et, egestas tempus tellus etiam
-              sed. Quam a scelerisque amet ullamcorper eu enim et fermentum, augue. Aliquet amet
-              volutpat quisque ut interdum tincidunt duis.
-            </p>
-  
-            <div class="mt-4 md:mt-8">
-              <a
-                href="#"
-                class="inline-block rounded border border-white bg-white px-12 py-3 text-sm font-medium text-blue-500 transition hover:bg-transparent hover:text-white focus:outline-none focus:ring focus:ring-yellow-400"
-              >
-                Get Started Today
-              </a>
-            </div>
+  <div class="mx-auto max-w-screen-2xl px-4 py-8 sm:px-6 lg:px-8">
+    <div class="grid grid-cols-1 gap-4 md:grid-cols-2">
+      <div class="bg-blue-600 p-8 md:p-12 lg:px-16 lg:py-24">
+        <div class="mx-auto max-w-xl text-center">
+          <h2 class="text-2xl font-bold text-white md:text-3xl">
+            VCG Production
+          </h2>
+          <p class="hidden text-white/90 sm:mt-4 sm:block">
+            Beatmakers can distribute their work on YouTube and platforms like
+            BeatStars through our network for free. Join our growing community
+            and have your profile showcased on the VCG website.
+          </p>
+          <div class="mt-4 md:mt-8">
+            <a
+              href="#"
+              class="inline-block rounded border border-white bg-white px-12 py-3 text-sm font-medium text-blue-500 transition hover:bg-transparent hover:text-white focus:outline-none focus:ring focus:ring-yellow-400"
+            >
+              Join Now
+            </a>
           </div>
         </div>
-  
-        <div class="grid grid-cols-2 gap-4 md:grid-cols-1 lg:grid-cols-2">
-          <img
-            alt=""
-            src="https://images.unsplash.com/photo-1621274790572-7c32596bc67f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=654&q=80"
-            class="h-40 w-full object-cover sm:h-56 md:h-full"
-          />
-  
-          <img
-            alt=""
-            src="https://images.unsplash.com/photo-1567168544813-cc03465b4fa8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80"
-            class="h-40 w-full object-cover sm:h-56 md:h-full"
-          />
-        </div>
+      </div>
+      <div class="grid grid-cols-2 gap-4 md:grid-cols-1 lg:grid-cols-2">
+        <img
+          alt=""
+          src="https://images.unsplash.com/photo-1621274790572-7c32596bc67f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8MHx8"
+          class="h-40 w-full object-cover sm:h-56 md:h-full"
+        />
+        <img
+          alt=""
+          src="https://images.unsplash.com/photo-1567168544813-cc03465b4fa8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90MHxpaHRz&auto=format&fit=crop&w=774&q=80"
+        />
       </div>
     </div>
-  </section>
+  </div>
+</section>
+<section class="py-14">
+  <div class="max-w-screen-xl mx-auto md:px-8">
+    <div class="items-center gap-x-12 sm:px-4 md:px-0 lg:flex">
+      <div class="flex-1 sm:hidden lg:block">
+        <img
+          src="https://images.unsplash.com/photo-1557804506-669a67965ba0?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80"
+          class="md:max-w-lg sm:rounded-lg"
+          alt=""
+        />
+      </div>
+      <div class="max-w-xl px-4 space-y-3 mt-6 sm:px-0 md:mt-0 lg:max-w-2xl">
+        <h3 class="text-indigo-600 font-semibold">VCG Studios</h3>
+        <p class="text-gray-800 text-3xl font-semibold sm:text-4xl">
+          Mixing and Recording Services
+        </p>
+        <p class="mt-3 text-gray-600">
+          We offer high-quality recording and mixing services specializing in
+          hip-hop/rap music, with plans to expand to other genres. Based in
+          Haute-Savoie, France, we operate two amateur studios. Artists can
+          utilize our services independently or combine them with distribution
+          for maximum reach.
+        </p>
+        <a
+          href="javascript:void(0)"
+          class="inline-flex gap-x-1 items-center text-indigo-600 hover:text-indigo-500 duration-150 font-medium"
+        >
+          Learn more
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 20 20"
+            fill="currentColor"
+            class="w-5 h-5"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M3 10a.75.75 0 01.75-.75h10.638L10.23 5.29a.75.75 0 111.04-1.08l5.5 5.25a.75.75 0 010 1.08l-5.5 5.25a.75.75 0 11-1.04-1.08l4.158-3.96H3.75A.75.75 0 013 10z"
+              clip-rule="evenodd"
+            ></path>
+          </svg>
+        </a>
+      </div>
+    </div>
+  </div>
+</section>
