--- a/src/app/components/pages/team/team.component.html
+++ b/src/app/components/pages/team/team.component.html
@@ -132,7 +132,7 @@
   <div class="flex flex-col">
     <div class="flex flex-col">
       <!-- Our Beatmakers -->
-      <div class="container max-w-7xl px-4">
+      <div class="container max-w-7xl px-4 flex flex-col items-center">
         <!-- Section Header -->
         <div class="flex flex-wrap justify-center text-center">
           <div class="flex justify-center items-center flex-col w-full">
@@ -147,7 +147,7 @@
         </div>
 
         <!-- Team Members -->
-        <div class="flex flex-wrap justify-center mb-24">
+        <div class="flex flex-wrap justify-center">
           <div class="w-full md:w-6/12 lg:w-3/12 mb-6 px-6 sm:px-6 lg:px-4">
             <div class="flex flex-col">
               <!-- Avatar -->
@@ -248,6 +248,14 @@
             </div>
           </div>
         </div>
+
+        <button
+          type="button"
+          class="max-w-m mb-24 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+          routerLink="/services"
+        >
+          Join our beatmakers
+        </button>
 
         <div
           class="flex flex-col sm:flex-row justify-center items-center h-96 sm:h-48"
