--- a/src/app/components/pages/team/team.component.scss
+++ b/src/app/components/pages/team/team.component.scss
@@ -1,5 +1,7 @@
+img {
+  transition: transform 0.3s ease-in-out;
+}
+
 img:hover {
-    transform: scale(1.05);
-    transition: transform 0.3s ease-in-out;
-  }
-  
+  transform: scale(1.05);
+}
