--- a/src/app/components/pages/services/services.component.html
+++ b/src/app/components/pages/services/services.component.html
@@ -14,7 +14,7 @@
         <!-- Feature 1 -->
         <li class="feature-1 space-y-3 py-8 lg:px-12 sm:py-0">
           <div
-            class="w-12 h-12 p-2 border text-indigo-600 rounded-full flex items-center justify-center"
+            class="w-12 h-12 p-2 border text-blue-700 rounded-full flex items-center justify-center"
           >
             <svg
               width="800px"
@@ -45,9 +45,7 @@
               />
             </svg>
           </div>
-          <h4 class="text-lg text-white font-semibold">
-            Music Distribution
-          </h4>
+          <h4 class="text-lg text-white font-semibold">Music Distribution</h4>
           <p>
             Flexible solutions for artists to share their music globally on
             streaming and download platforms.
@@ -56,7 +54,7 @@
         <!-- Feature 2 -->
         <li class="feature-2 space-y-3 py-8 lg:px-12 sm:py-0">
           <div
-            class="w-12 h-12 border text-indigo-600 rounded-full flex items-center justify-center"
+            class="w-12 h-12 border text-blue-700 rounded-full flex items-center justify-center"
           >
             <svg
               width="24"
@@ -82,7 +80,7 @@
         <!-- Feature 3 -->
         <li class="feature-3 space-y-3 py-8 lg:px-12 sm:py-0">
           <div
-            class="w-12 h-12 p-2 border text-indigo-600 rounded-full flex items-center justify-center"
+            class="w-12 h-12 p-2 border text-blue-700 rounded-full flex items-center justify-center"
           >
             <svg
               version="1.0"
@@ -136,7 +134,7 @@
         />
       </div>
       <div class="max-w-xl px-4 space-y-3 mt-6 sm:px-0 md:mt-0 lg:max-w-2xl">
-        <h3 class="text-indigo-600 font-semibold">VCG Distribution</h3>
+        <h3 class="text-blue-700 font-semibold">VCG Distribution</h3>
         <p class="text-white text-3xl font-semibold sm:text-4xl">
           Music Distribution Services
         </p>
@@ -148,7 +146,7 @@
         </p>
         <a
           href="javascript:void(0)"
-          class="inline-flex gap-x-1 items-center text-indigo-600 hover:text-indigo-500 duration-150 font-medium"
+          class="inline-flex gap-x-1 items-center text-blue-700 hover:text-indigo-500 duration-150 font-medium"
         >
           Get your music distributed !
           <svg viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
@@ -174,10 +172,18 @@
         />
       </div>
       <div class="max-w-xl px-4 space-y-3 mt-6 sm:px-0 md:mt-0 lg:max-w-2xl">
-        <h3 class="text-indigo-600 font-semibold">VCG Production</h3>
-        <p class="text-white text-3xl font-semibold sm:text-4xl">
-          Beatmaker Team
-        </p>
+        <h3 class="text-blue-700 font-semibold">VCG Production</h3>
+        <div class="flex items-center space-x-2">
+          <p class="text-white text-3xl font-semibold sm:text-4xl">
+            Beatmaker Team
+          </p>
+          <span
+            class="bg-green-500 text-white text-sm font-bold px-2 py-1 rounded-full"
+          >
+            FREE
+          </span>
+        </div>
+
         <p class="mt-3 text-gray-300">
           Beatmakers can distribute their work on YouTube and platforms like
           BeatStars through our network for free. Join our growing community and
@@ -185,7 +191,7 @@
         </p>
         <a
           href="javascript:void(0)"
-          class="inline-flex gap-x-1 items-center text-indigo-600 hover:text-indigo-500 duration-150 font-medium"
+          class="inline-flex gap-x-1 items-center text-blue-700 hover:text-indigo-500 duration-150 font-medium"
         >
           Join our beatmakers !
           <svg viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
@@ -211,7 +217,7 @@
         />
       </div>
       <div class="max-w-xl px-4 space-y-3 mt-6 sm:px-0 md:mt-0 lg:max-w-2xl">
-        <h3 class="text-indigo-600 font-semibold">VCG Studio</h3>
+        <h3 class="text-blue-700 font-semibold">VCG Studio</h3>
         <p class="text-white text-3xl font-semibold sm:text-4xl">
           Mixing and Recording Services
         </p>
@@ -224,7 +230,7 @@
         </p>
         <a
           href="javascript:void(0)"
-          class="inline-flex gap-x-1 items-center text-indigo-600 hover:text-indigo-500 duration-150 font-medium"
+          class="inline-flex gap-x-1 items-center text-blue-700 hover:text-indigo-500 duration-150 font-medium"
         >
           Book a studio session !
           <svg viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
