feat: artists update

--- a/src/app/components/pages/artists/artists.component.html
+++ b/src/app/components/pages/artists/artists.component.html
@@ -4,16 +4,16 @@
 
 <section class="m-8">
   <div
-    class="mx-auto max-w-screen-xl px-4 py-8 sm:px-6 lg:px-8 bg-white rounded-xl"
+    class="mx-auto max-w-screen-xl px-4 py-8 sm:px-6 lg:px-8 bg-black rounded-xl"
   >
     <div class="grid grid-cols-1 gap-4 md:grid-cols-2 md:items-center md:gap-8">
       <div>
         <div class="max-w-lg md:max-w-none">
-          <h2 class="text-2xl font-semibold text-gray-900 sm:text-3xl">
+          <h2 class="text-2xl font-semibold text-white sm:text-3xl">
             Kitsui & Køni
           </h2>
 
-          <p class="mt-4 text-gray-700 font-medium">
+          <p class="mt-4 text-gray-300 font-medium">
             Kitsui & Køni are a duo of french rappers. They have released more
             than 30 songs together, including 4 EPs.
           </p>
@@ -35,7 +35,7 @@
 
 <section class="m-8">
   <div
-    class="mx-auto max-w-screen-xl px-4 py-8 sm:px-6 lg:px-8 bg-white rounded-xl"
+    class="mx-auto max-w-screen-xl px-4 py-8 sm:px-6 lg:px-8 bg-black border-white rounded-xl"
   >
     <div class="grid grid-cols-1 gap-4 md:grid-cols-2 md:items-center md:gap-8">
        <div
@@ -49,11 +49,11 @@
       </div>
       <div>
         <div class="max-w-lg md:max-w-none">
-          <h2 class="text-2xl font-semibold text-gray-900 sm:text-3xl">
+          <h2 class="text-2xl font-semibold text-white sm:text-3xl">
             MADPOOF
           </h2>
 
-          <p class="mt-4 text-gray-700 font-medium">
+          <p class="mt-4 text-gray-300 font-medium">
             MADPOOF is a drum & bass and breakcore producer. He has released
             more than 10 singles already.
           </p>
@@ -69,16 +69,16 @@
 
 <section class="m-8">
   <div
-    class="mx-auto max-w-screen-xl px-4 py-8 sm:px-6 lg:px-8 bg-white rounded-xl"
+    class="mx-auto max-w-screen-xl px-4 py-8 sm:px-6 lg:px-8 bg-black border-white rounded-xl"
   >
     <div class="grid grid-cols-1 gap-4 md:grid-cols-2 md:items-center md:gap-8">
       <div>
         <div class="max-w-lg md:max-w-none">
-          <h2 class="text-2xl font-semibold text-gray-900 sm:text-3xl">
+          <h2 class="text-2xl font-semibold text-white sm:text-3xl">
             Cl6ud6
           </h2>
 
-          <p class="mt-4 text-gray-700 font-medium">
+          <p class="mt-4 text-gray-300 font-medium">
             Cl6ud6 is a french rapper who has worked with us Køni many times.
           </p>
         </div>
@@ -99,25 +99,25 @@
 
 <section class="m-8">
   <div
-    class="mx-auto max-w-screen-xl px-4 py-8 sm:px-6 lg:px-8 bg-white rounded-xl"
+    class="mx-auto max-w-screen-xl px-4 py-8 sm:px-6 lg:px-8 bg-black border-white rounded-xl"
   >
     <div class="grid grid-cols-1 gap-4 md:grid-cols-2 md:items-center md:gap-8">
        <div
         class="artist-image relative w-full pt-[56.25%] rounded-lg overflow-hidden"
       >
         <img
-          src="/images/artists/madpoof.png"
+          src="/images/artists/loupa.jpeg"
           alt="Loupa"
           class="absolute inset-0 w-full h-full object-cover"
         />
       </div>
       <div>
         <div class="max-w-lg md:max-w-none">
-          <h2 class="text-2xl font-semibold text-gray-900 sm:text-3xl">
+          <h2 class="text-2xl font-semibold text-white sm:text-3xl">
             Loupa
           </h2>
 
-          <p class="mt-4 text-gray-700 font-medium">
+          <p class="mt-4 text-gray-300 font-medium">
             Loupa is a french rapper who has worked with us Køni many times.
           </p>
         </div>
@@ -128,17 +128,17 @@
 
 <section class="m-8">
   <div
-    class="mx-auto max-w-screen-xl px-4 py-8 sm:px-6 lg:px-8 bg-white rounded-xl"
+    class="mx-auto max-w-screen-xl px-4 py-8 sm:px-6 lg:px-8 bg-black border-white rounded-xl"
   >
     <div class="grid grid-cols-1 gap-4 md:grid-cols-2 md:items-center md:gap-8">
       <div>
         <div class="max-w-lg md:max-w-none">
-          <h2 class="text-2xl font-semibold text-gray-900 sm:text-3xl">
+          <h2 class="text-2xl font-semibold text-white sm:text-3xl">
             Gaxve
           </h2>
 
-          <p class="mt-4 text-gray-700 font-medium">
-            Gaxve is a breakcore producer. He has collaborated with MADPOOF.
+          <p class="mt-4 text-gray-300 font-medium">
+            Gaxve is a breakcore producer and has collaborated with MADPOOF.
           </p>
         </div>
       </div>
@@ -147,7 +147,7 @@
         class="artist-image relative w-full pt-[56.25%] rounded-lg overflow-hidden"
       >
         <img
-          src="/images/artists/madpoof.png"
+          src="/images/artists/gaxve.png"
           alt="Gaxve"
           class="absolute inset-0 w-full h-full object-cover"
         />
@@ -158,7 +158,7 @@
 
 <section class="m-8">
   <div
-    class="mx-auto max-w-screen-xl px-4 py-8 sm:px-6 lg:px-8 bg-white rounded-xl"
+    class="mx-auto max-w-screen-xl px-4 py-8 sm:px-6 lg:px-8 bg-black border-white rounded-xl"
   >
     <div class="grid grid-cols-1 gap-4 md:grid-cols-2 md:items-center md:gap-8">
        <div
@@ -172,12 +172,12 @@
       </div>
       <div>
         <div class="max-w-lg md:max-w-none">
-          <h2 class="text-2xl font-semibold text-gray-900 sm:text-3xl">
+          <h2 class="text-2xl font-semibold text-white sm:text-3xl">
             CXMET
           </h2>
 
-          <p class="mt-4 text-gray-700 font-medium">
-            CXMET is phonkwave producer. He has collaborated with MADPOOF.
+          <p class="mt-4 text-gray-300 font-medium">
+            CXMET is a phonkwave producer and has collaborated with MADPOOF.
           </p>
         </div>
       </div>
