wip: services images

--- a/src/app/components/pages/services/services.component.scss
+++ b/src/app/components/pages/services/services.component.scss
@@ -1,7 +1,7 @@
-img {
+.service-image {
   transition: transform 0.3s ease-in-out;
 }
 
-img:hover {
+.service-image:hover {
   transform: scale(1.05);
 }
