--- a/src/app/components/pages/services/services.component.html
+++ b/src/app/components/pages/services/services.component.html
@@ -45,7 +45,9 @@
               />
             </svg>
           </div>
-          <h4 class="text-lg text-blue-600 font-semibold">Music Distribution</h4>
+          <h4 class="text-lg text-blue-600 font-semibold">
+            Music Distribution
+          </h4>
           <p>
             Flexible solutions for artists to share their music globally on
             streaming and download platforms.
@@ -126,13 +128,14 @@
 <section class="py-14">
   <div class="max-w-screen-xl mx-auto md:px-8">
     <div class="items-center gap-x-12 sm:px-4 md:px-0 lg:flex">
-      <div class="flex-1 sm:hidden lg:block">
+      <div class="relative w-full pt-[56.25%] rounded-lg overflow-hidden">
         <img
           src="https://images.unsplash.com/photo-1557804506-669a67965ba0?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80"
-          class="md:max-w-lg sm:rounded-lg"
+          class="absolute inset-0 w-full h-full object-cover"
           alt=""
         />
       </div>
+
       <div class="max-w-xl px-4 space-y-3 mt-6 sm:px-0 md:mt-0 lg:max-w-2xl">
         <h3 class="text-blue-600 font-semibold">VCG Distribution</h3>
         <p class="text-white text-3xl font-semibold sm:text-4xl">
@@ -164,13 +167,16 @@
 <section class="py-14">
   <div class="max-w-screen-xl mx-auto md:px-8">
     <div class="items-center gap-x-12 sm:px-4 md:px-0 lg:flex">
-      <div class="flex-1 sm:hidden lg:block">
+      <div
+        class="service-image relative w-full overflow-hidden aspect-w-16 aspect-h-9 rounded-lg"
+      >
         <img
-          src="https://images.unsplash.com/photo-1557804506-669a67965ba0?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80"
-          class="md:max-w-lg sm:rounded-lg"
+          src="/images/services/beatmaking.png"
+          class="inset-0 w-full h-full object-cover"
           alt=""
         />
       </div>
+
       <div class="max-w-xl px-4 space-y-3 mt-6 sm:px-0 md:mt-0 lg:max-w-2xl">
         <h3 class="text-blue-600 font-semibold">VCG Production</h3>
         <div class="flex items-center space-x-2">
@@ -209,10 +215,10 @@
 <section class="py-14">
   <div class="max-w-screen-xl mx-auto md:px-8">
     <div class="items-center gap-x-12 sm:px-4 md:px-0 lg:flex">
-      <div class="flex-1 sm:hidden lg:block">
+      <div class="service-image relative w-full rounded-lg overflow-hidden">
         <img
           src="https://images.unsplash.com/photo-1557804506-669a67965ba0?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80"
-          class="md:max-w-lg sm:rounded-lg"
+          class="inset-0 w-full h-full object-cover"
           alt=""
         />
       </div>
