--- a/src/app/components/pages/artists/artists.component.html
+++ b/src/app/components/pages/artists/artists.component.html
@@ -165,7 +165,7 @@
         class="artist-image relative w-full pt-[56.25%] rounded-lg overflow-hidden"
       >
         <img
-          src="/images/artists/madpoof.png"
+          src="/images/artists/cxmet.png"
           alt="CXMET"
           class="absolute inset-0 w-full h-full object-cover"
         />
