--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -5,7 +5,7 @@
     <a
       routerLink="/"
       class="text-2xl font-semibold whitespace-nowrap dark:text-white"
-      >VCG Recordz</a
+      >💿 VCG Recordz</a
     >
     <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
       <button
