feat: artists links

--- a/src/app/components/pages/artists/artists.component.html
+++ b/src/app/components/pages/artists/artists.component.html
@@ -14,9 +14,61 @@
           </h2>
 
           <p class="mt-4 text-gray-300 font-medium">
-            Kitsui & Køni are a duo of french rappers. They have released more
-            than 30 songs together, including 4 EPs.
+            Kitsui & Køni are a duo of French rappers. Together, they have
+            released over 30 songs, including 4 EPs, and have recorded more than
+            150 tracks along 8 years of activity.
           </p>
+
+          <div class="mt-6 flex flex-wrap gap-4">
+            <a
+              href="https://www.youtube.com/@kitsuikoni"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="text-yellow-600 hover:text-white font-medium"
+            >
+              YouTube
+            </a>
+            <a
+              href="https://open.spotify.com/artist/0VLddHfsPQHS0N0ed9ktm5?si=AN2wS1y6TpiMtcMg3MMjQA"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="text-yellow-600 hover:text-white font-medium"
+            >
+              Spotify (Kitsui)
+            </a>
+            <a
+              href="https://open.spotify.com/artist/26vzcSCqZAHR7duFOug3zm?si=BDYaQC3HTmiZVu_lJEMWJg"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="text-yellow-600 hover:text-white font-medium"
+            >
+              Spotify (Køni)
+            </a>
+            <a
+              href="https://soundcloud.com/kitsuikoni"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="text-yellow-600 hover:text-white font-medium"
+            >
+              SoundCloud
+            </a>
+            <a
+              href="https://www.instagram.com/kitsui.vcg/"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="text-yellow-600 hover:text-white font-medium"
+            >
+              Instagram (Kitsui)
+            </a>
+            <a
+              href="https://www.instagram.com/k0ni.vcg"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="text-yellow-600 hover:text-white font-medium"
+            >
+              Instagram (Køni)
+            </a>
+          </div>
         </div>
       </div>
 
@@ -38,25 +90,66 @@
     class="mx-auto max-w-screen-xl px-4 py-8 sm:px-6 lg:px-8 bg-black border-white rounded-xl"
   >
     <div class="grid grid-cols-1 gap-4 md:grid-cols-2 md:items-center md:gap-8">
-       <div
+      <div
         class="artist-image relative w-full pt-[56.25%] rounded-lg overflow-hidden"
       >
         <img
           src="/images/artists/madpoof.png"
           alt="MADPOOF"
           class="absolute inset-0 w-full h-full object-cover"
-        />" />
+        />
       </div>
       <div>
         <div class="max-w-lg md:max-w-none">
-          <h2 class="text-2xl font-semibold text-white sm:text-3xl">
-            MADPOOF
-          </h2>
+          <h2 class="text-2xl font-semibold text-white sm:text-3xl">MADPOOF</h2>
 
           <p class="mt-4 text-gray-300 font-medium">
-            MADPOOF is a drum & bass and breakcore producer. He has released
-            more than 10 singles already.
+            MADPOOF is a Trap, Drum & Bass and new-age Breakcore producer. He
+            has released more than 10 singles already.
           </p>
+
+          <div class="mt-6 flex flex-wrap gap-4">
+            <a
+              href="https://www.youtube.com/@madpoof-music"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="text-red-600 hover:text-white font-medium"
+            >
+              YouTube
+            </a>
+            <a
+              href="https://open.spotify.com/artist/5MMWP4xWHgpaLUJtgBTXgg?si=kVvWHqp4SHWv1iD_9Wa8ug"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="text-red-600 hover:text-white font-medium"
+            >
+              Spotify
+            </a>
+            <a
+              href="https://soundcloud.com/madpoof"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="text-red-600 hover:text-white font-medium"
+            >
+              SoundCloud
+            </a>
+            <a
+              href="https://www.instagram.com/mad.poof"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="text-red-600 hover:text-white font-medium"
+            >
+              Instagram
+            </a>
+            <a
+              href="https://madpoof.com/links"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="text-red-600 hover:text-white font-medium"
+            >
+              Madpoof.com (more links)
+            </a>
+          </div>
         </div>
       </div>
     </div>
@@ -74,17 +167,43 @@
     <div class="grid grid-cols-1 gap-4 md:grid-cols-2 md:items-center md:gap-8">
       <div>
         <div class="max-w-lg md:max-w-none">
-          <h2 class="text-2xl font-semibold text-white sm:text-3xl">
-            Cl6ud6
-          </h2>
+          <h2 class="text-2xl font-semibold text-white sm:text-3xl">Cl6ud6</h2>
 
           <p class="mt-4 text-gray-300 font-medium">
-            Cl6ud6 is a french rapper who has worked with us Køni many times.
+            Cl6ud6 is a French rapper who has underground and modern vibes. He
+            has collaborated with Køni numerous times.
           </p>
+
+          <div class="mt-6 flex flex-wrap gap-4">
+            <a
+              href="https://open.spotify.com/artist/3b99lAIuhABJw2lj1IVe8e?si=v5uHoWizQbuLswv-pwoN-A"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="text-green-600 hover:text-white font-medium"
+            >
+              Spotify
+            </a>
+            <a
+              href="https://www.instagram.com/cl6ud6/"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="text-green-600 hover:text-white font-medium"
+            >
+              Instagram
+            </a>
+            <a
+              href="https://www.youtube.com/@Cl6ud6"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="text-green-600 hover:text-white font-medium"
+            >
+              YouTube
+            </a>
+          </div>
         </div>
       </div>
 
-       <div
+      <div
         class="artist-image relative w-full pt-[56.25%] rounded-lg overflow-hidden"
       >
         <img
@@ -102,7 +221,7 @@
     class="mx-auto max-w-screen-xl px-4 py-8 sm:px-6 lg:px-8 bg-black border-white rounded-xl"
   >
     <div class="grid grid-cols-1 gap-4 md:grid-cols-2 md:items-center md:gap-8">
-       <div
+      <div
         class="artist-image relative w-full pt-[56.25%] rounded-lg overflow-hidden"
       >
         <img
@@ -113,13 +232,41 @@
       </div>
       <div>
         <div class="max-w-lg md:max-w-none">
-          <h2 class="text-2xl font-semibold text-white sm:text-3xl">
-            Loupa
-          </h2>
+          <h2 class="text-2xl font-semibold text-white sm:text-3xl">Loupa</h2>
 
           <p class="mt-4 text-gray-300 font-medium">
-            Loupa is a french rapper who has worked with us Køni many times.
+            Loupa is a French rapper who has collaborated extensively with Køni
+            and the Parisian artist Cinco. Known for his global perspective,
+            Loupa travels around the world to work with artists from abroad,
+            bringing diverse influences to his music.
           </p>
+
+          <div class="mt-6 flex flex-wrap gap-4">
+            <a
+              href="https://open.spotify.com/artist/6AyhJFNZkX3a3Gidldg9eh?si=AaS3btx-TbqAT3NeYiv62Q"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="text-gray-500 hover:text-white font-medium"
+            >
+              Spotify
+            </a>
+            <a
+              href="https://www.instagram.com/loupa__officiel/"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="text-gray-500 hover:text-white font-medium"
+            >
+              Instagram
+            </a>
+            <a
+              href="https://www.youtube.com/@LoupaOfficiel"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="text-gray-500 hover:text-white font-medium"
+            >
+              YouTube
+            </a>
+          </div>
         </div>
       </div>
     </div>
@@ -133,17 +280,61 @@
     <div class="grid grid-cols-1 gap-4 md:grid-cols-2 md:items-center md:gap-8">
       <div>
         <div class="max-w-lg md:max-w-none">
-          <h2 class="text-2xl font-semibold text-white sm:text-3xl">
-            Gaxve
-          </h2>
+          <h2 class="text-2xl font-semibold text-white sm:text-3xl">Gaxve</h2>
 
           <p class="mt-4 text-gray-300 font-medium">
-            Gaxve is a breakcore producer and has collaborated with MADPOOF.
+            Gaxve, a breakcore producer from Spain, Europe, primarily focused on
+            new-age breakcore, Drum & Bass, and Jungle, collaborated with
+            MADPOOF on the tracks "Refresh Token" and "Internal Conflict
+            (Unreleased yet)", released via Breakstation.
           </p>
+
+          <div class="mt-6 flex flex-wrap gap-4">
+            <a
+              href="https://open.spotify.com/artist/1L0bkjAeGfKK7BWscIMWKk?si=xRQIH7BpTzKAgi8YUArHqA"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="text-indigo-600 hover:text-white font-medium"
+            >
+              Spotify
+            </a>
+            <a
+              href="https://www.youtube.com/@gaxve"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="text-indigo-600 hover:text-white font-medium"
+            >
+              YouTube
+            </a>
+            <a
+              href="https://x.com/GaxveMusic"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="text-indigo-600 hover:text-white font-medium"
+            >
+              Twitter
+            </a>
+            <a
+              href="https://www.instagram.com/gaxvemusic/"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="text-indigo-600 hover:text-white font-medium"
+            >
+              Instagram
+            </a>
+            <a
+              href="https://soundcloud.com/gaxve"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="text-indigo-600 hover:text-white font-medium"
+            >
+              SoundCloud
+            </a>
+          </div>
         </div>
       </div>
 
-       <div
+      <div
         class="artist-image relative w-full pt-[56.25%] rounded-lg overflow-hidden"
       >
         <img
@@ -161,7 +352,7 @@
     class="mx-auto max-w-screen-xl px-4 py-8 sm:px-6 lg:px-8 bg-black border-white rounded-xl"
   >
     <div class="grid grid-cols-1 gap-4 md:grid-cols-2 md:items-center md:gap-8">
-       <div
+      <div
         class="artist-image relative w-full pt-[56.25%] rounded-lg overflow-hidden"
       >
         <img
@@ -172,13 +363,39 @@
       </div>
       <div>
         <div class="max-w-lg md:max-w-none">
-          <h2 class="text-2xl font-semibold text-white sm:text-3xl">
-            CXMET
-          </h2>
+          <h2 class="text-2xl font-semibold text-white sm:text-3xl">CXMET</h2>
 
           <p class="mt-4 text-gray-300 font-medium">
-            CXMET is a phonkwave producer and has collaborated with MADPOOF.
+            CXMET is a phonkwave producer who collaborated with MADPOOF on the
+            track "EYES OF HEAVEN (Unreleased yet)", released via Breakstation.
           </p>
+
+          <div class="mt-6 flex flex-wrap gap-4">
+            <a
+              href="https://open.spotify.com/artist/737y623tgokGcAgc9udQcg?si=UY_E1t9_SdSfrXRJpdgXpg"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="text-gray-500 hover:text-white font-medium"
+            >
+              Spotify
+            </a>
+            <a
+              href="https://soundcloud.com/cxmet-official"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="text-gray-500 hover:text-white font-medium"
+            >
+              Soundcloud
+            </a>
+            <a
+              href="https://www.youtube.com/channel/UC-mYBHjcR_XbXQNUvYFj4zA"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="text-gray-500 hover:text-white font-medium"
+            >
+              YouTube
+            </a>
+          </div>
         </div>
       </div>
     </div>
